--- a/sem_patch_extractor/pyproject.toml
+++ b/sem_patch_extractor/pyproject.toml
@@ -1,17 +1,18 @@
 [project]
-name = "sem-patch-extractor"
+name = "sem_patch_extractor"
 version = "0.1.0"
-description = "Extract 1µm × 1µm patches from SEM .tif images"
-authors = [{ name = "Andrea Cicconardi", email = "andrea.cicconardi@iit.com" }]
-license = "MIT"
+description = "Extract N µm × N µm patches from SEM .tif images using scalebar or metadata"
+authors = [
+  { name = "Andrea Cicconardi", email = "andrea.cicconardi@iit.it" }
+]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.8"
 dependencies = [
-    "numpy",
-    "pillow",
-    "scipy",
-    "matplotlib",
+  "numpy",
+  "Pillow",
+  "scipy",
+  "matplotlib"
 ]
 
 [project.urls]
-Homepage = "https://github.com/andreacicconardi94/Research-Work/tree/main"
+Repository = "https://github.com/andreacicconardi94/Research-Work"
